NIFI-13710: Fixing text overflow issues.

--- a/nifi-frontend/src/main/frontend/apps/update-attribute/src/app/pages/update-attribute/ui/rule-listing/rule-listing.component.scss
+++ b/nifi-frontend/src/main/frontend/apps/update-attribute/src/app/pages/update-attribute/ui/rule-listing/rule-listing.component.scss
@@ -25,4 +25,32 @@
     .cdk-drag-disabled {
         font-style: normal;
     }
+
+    .reorder-header {
+        mat-panel-title {
+            overflow: hidden;
+            display: block;
+        }
+
+        mat-panel-description {
+            @apply truncate;
+            display: block;
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+    }
+
+    .editable-header {
+        mat-panel-title {
+            @apply truncate;
+            display: block;
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+
+        mat-panel-description {
+            overflow: hidden;
+            display: block;
+        }
+    }
 }
